syntax = "proto3";

option go_package = "./;user_service";

import "google/protobuf/timestamp.proto";

service UserGrpcService {
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse) {}
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse) {}
}

message GetAllUsersRequest {
  google.protobuf.Timestamp creation_date = 1;
}

message GetAllUsersResponse {
  repeated UserModel users = 1;
}

message GetUserByIdRequest {
  int64 id = 1;
}

message GetUserByIdResponse {
  UserModel user = 1;
}

message UserModel {
  int64 id = 1;
  string user_name = 2;
  string first_name = 3;
  string last_name = 4;
}